fixed rain forecast icon overlapping temperature

--- a/src/styles.css
+++ b/src/styles.css
@@ -253,7 +253,7 @@ body {
 }
 
 .forecast-weather {
-  margin: -0.8em 0em;
+  margin: -0.75em 0em -0.5em 0em;
 }
 
 h1 {
